--- a/electives/apm/lab/lista-4/Tousvoir/app/src/main/res/layout/fragment_images_list.xml
+++ b/electives/apm/lab/lista-4/Tousvoir/app/src/main/res/layout/fragment_images_list.xml
@@ -10,7 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/fragment_images_list_title_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -29,7 +29,7 @@
         app:layout_constraintBottom_toTopOf="@+id/open_directory_button_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/fragment_images_list_title_view" />
 
     <Button
         android:id="@+id/open_directory_button_view"
