--- a/electives/apm/lab/lista-4/Tousvoir/app/src/main/res/layout/fragment_images_list_element.xml
+++ b/electives/apm/lab/lista-4/Tousvoir/app/src/main/res/layout/fragment_images_list_element.xml
@@ -7,14 +7,15 @@
 
     <TextView
         android:id="@+id/images_list_element_title_view"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/images_list_element_rating_view"
+        app:layout_constraintStart_toEndOf="@+id/images_list_element_thumbnail_view"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -28,4 +29,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/images_list_element_thumbnail_view"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
